Prevent horizontal scroll on narrow displays

--- a/style.css
+++ b/style.css
@@ -79,10 +79,11 @@ a:visited {
 }
 
 .container {
-  padding: 2rem;
+  padding: 2rem 0.2rem;
   margin: 0 auto;
   width: 100%;
   max-width: 30rem;
+  box-sizing: border-box;
 }
 
 .train {
